--- a/Romanian/main/BugReport.apk/res/values-ro/strings.xml
+++ b/Romanian/main/BugReport.apk/res/values-ro/strings.xml
@@ -98,33 +98,128 @@
     <string name="logo_title">Centrul de raportare probleme</string>
     <string name="max_error">Descrierea %1$s ar trebui să fie mai scurtă.</string>
     <string name="menu_copy">Copiaţi</string>
+    <string name="message_label">Mesaj</string>
+    <string name="michat_app_name">Suport online</string>
+    <string name="michat_artifical_customer_phone">4001005678</string>
+    <string name="michat_artifical_customer_phone_dial_error">"Dacă nu puteți suna la numărul cu 400, formați %1$s de pe alt telefon"</string>
+    <string name="michat_artifical_customer_text">Personal din echipa de suport</string>
+    <string name="michat_attach_image">Imagine</string>
+    <string name="michat_attach_smiley">Emoticon</string>
+    <string name="michat_attach_take_photo">Fotografie</string>
+    <string name="michat_back_to_detail">Mergeți înapoi la chat</string>
+    <string name="michat_cant_join_artifical">"Nu s-a putut conecta datorită unei erori de rețea"</string>
+    <string name="michat_check_network">Verificați setările rețelei</string>
+    <string name="michat_close_text">Chat încheiat</string>
+    <string name="michat_comment_net_error">"Nu s-a putut conecta la rețea; încercați din nou mai târziu"</string>
+    <string name="michat_comment_submit">Acordați o notă și navigați înapoi</string>
+    <string name="michat_comment_thx">Vă mulțumim pentru feedback!</string>
+    <string name="michat_customer_join">Porniți chat</string>
+    <string name="michat_customer_quit">Persoana din echipa de suport a părăsit chat-ul</string>
+    <string name="michat_customer_text">Suport clienți</string>
+    <string name="michat_data_error">A apărut o eroare, încercați din nou mai târziu</string>
+    <string name="michat_error_need_login_btn">Conectați-vă</string>
+    <string name="michat_error_need_login_text">Conectați-vă pentru a putea utiliza suportul online</string>
+    <string name="michat_failed_to_add_media">"Ne pare rău, nu s-a putut trimite %1$s"</string>
+    <string name="michat_failed_to_fetch_fql">"Nu s-au putut obține răspunsurile la problemele frecvente; verificați conexiunea la rețea"</string>
+    <string name="michat_feedback_title_name">Studiul feedback-ului</string>
+    <string name="michat_finish_text">Finalizați</string>
+    <string name="michat_in_artifical_customer_state">"Nu puteți încheia această acțiune în timp ce primiți ajutor"</string>
+    <string name="michat_invalid_url">URL invalid</string>
+    <string name="michat_invation_invite_fail">Ne pare rău, echipa de suport este ocupată acum. Reveniți mai târziu.</string>
+    <string name="michat_invation_invite_full">Ne pare rău, întreaga echipă de suport este ocupată acum. Reveniți mai târziu.</string>
+    <string name="michat_kefu_welcome">Bine ați venit la serviciul de suport online Xiaomi!</string>
+    <string name="michat_lose_artifical">A apărut o eroare de rețea și ați părăsit chat-ul</string>
+    <string name="michat_menu_copy_text">Copiați</string>
+    <string name="michat_mesage_resend_error_network">"Nu s-a putut conecta la rețea"</string>
+    <string name="michat_mesage_send_error_network">"Nu s-a putut trimite; verificați conexiunea la rețea"</string>
+    <string name="michat_message_copy_info">Copiat în clipboard</string>
+    <string name="michat_message_join_again">"Bine ați revenit!"</string>
+    <string name="michat_message_robot_welcome">"Numele meu este Iepurașul Mi. Sunt un robot care asigur suportul online."</string>
+    <string name="michat_msg_image_upload_error">"Nu s-a putut trimite imaginea; încercați din nou mai târziu"</string>
+    <string name="michat_msg_input_info">Descrieți problema pe scurt</string>
+    <string name="michat_msg_status_arrived">Trimis</string>
+    <string name="michat_msg_status_send">Trimiteți</string>
+    <string name="michat_msg_status_sendding">Se trimite…</string>
+    <string name="michat_msg_too_long_info">"Ați introdus %1$d caractere. Puteți introduce maxim %2$d caractere."</string>
+    <string name="michat_net_error_info">Nu aveți o conexiune la rețea; atingeți aici pentru a merge la Setări</string>
+    <string name="michat_network_unavaliable">"Nu s-au putut obține informațiile; verificați conexiunea la rețea"</string>
+    <string name="michat_no_good_message_title">"Problema mea nu s-a rezolvat."</string>
+    <string name="michat_product_click_text">Vizualizați</string>
+    <string name="michat_pull_to_refresh_pull_label">Glisați în jos pentru a vedea istoricul</string>
+    <string name="michat_pull_to_refresh_refreshing_label">Se încarcă istoricul…</string>
+    <string name="michat_pull_to_refresh_release_label">Eliberați pentru a vedea istoricul</string>
+    <string name="michat_queue_pos_update">Sunt %1$d persoane înaintea dumneavoastră, așteptați un moment…</string>
+    <string name="michat_return_to_outside">Ieșire</string>
+    <string name="michat_service_unavailiable">"Nu s-au putut obține informațiile; încercați mai târziu"</string>
+    <string name="michat_skillset_business_type_title">Selectați serviciul</string>
+    <string name="michat_skillset_product_title">Selectați produsul</string>
+    <string name="michat_transfer_message">Căutăm o persoană care să vă poată ajuta…</string>
+    <string name="michat_try_again">Reîncercați</string>
+    <string name="michat_type_list_null">"Nu s-au putut obține informațiile; încercați mai târziu"</string>
+    <string name="michat_type_picture">Imagine</string>
+    <string name="michat_user_quit">Ați părăsit chat-ul</string>
+    <string name="michat_wait_for_a_moment">Doar o secundă, rezolvarea e pe drum!</string>
+    <string name="michat_webview_title">Vizualizați detaliile</string>
+    <string name="min_error">%1$s dvs ar trebui să fie mai lung.</string>
     <string name="modem_tool_log">Înregistrare jurnale modem</string>
     <string name="modem_tool_log_start">Porniţi</string>
     <string name="modem_tool_log_start_toast">Porniţi înregistrarea jurnalului modemului în %s</string>
     <string name="modem_tool_log_stop">Opriţi</string>
     <string name="modem_tool_log_stop_toast">Opriţi înregistrarea jurnalului modemului în %s</string>
-    <string name="network_err">Nu se poate conecta la rețea.</string>
+    <string name="multi_graph_more">Total elemente: %d</string>
+    <string name="network_err">"Nu se poate conecta la rețea."</string>
+    <string name="network_errorbtntip_custom">Încercați din nou</string>
+    <string name="network_errorbtntip_login">Conectați-vă</string>
+    <string name="network_errorbtntip_noconnection">Verificați setările rețelei</string>
+    <string name="network_errorbtntip_parse">Încercați din nou</string>
+    <string name="network_errorbtntip_server">Încercați din nou</string>
+    <string name="network_errorbtntip_timeout">Încercați din nou</string>
+    <string name="network_errorbtntip_unknow">Încercați din nou</string>
+    <string name="network_errortip_custom">Eroare de personalizare</string>
+    <string name="network_errortip_login">Conectați-vă mai întâi</string>
+    <string name="network_errortip_noconnection">"Nu s-a putut conecta la rețea; verificați setările acesteia"</string>
+    <string name="network_errortip_parse">A apărut o eroare</string>
+    <string name="network_errortip_server">A intervenit o eroare de server, încercați din nou mai târziu</string>
+    <string name="network_errortip_timeout">Conexiunea a expirat; încercați din nou mai târziu</string>
+    <string name="network_errortip_unknow">"Ne străduim să rezolvăm problema…"</string>
     <string name="network_unavailable_dialog_button_ok">OK</string>
     <string name="network_unavailable_dialog_content">Nu se poate conecta la rețea. Mesajul dvs. va fi trimis atunci când veţi avea o conexiune de date</string>
     <string name="network_unavailable_dialog_title">Verificați conexiunea de date</string>
     <string name="non_system_app_select">Aplicaţii descărcate</string>
+    <string name="nothing">--</string>
     <string name="packaging_dialog_content">Creare raport…</string>
+    <string name="pic_not_exist">"Această imagine nu există"</string>
+    <string name="pic_view_format">%1$s/%2$s</string>
     <string name="plus_one_submit_dialog_content">Feedback-ul dvs., alături de jurnalurile de eroare vor fi trimise la serverele Mi, atunci când dispozitivul este conectat la Wi-Fi.</string>
     <string name="plus_one_submit_dialog_not_show_again">Memorare preferinţă</string>
+    <string name="post_miui_bbs_failed">"Nu s-a putut posta pe forum"</string>
+    <string name="pull_to_refresh_pull_label">Glisați în jos pentru a împrospăta</string>
+    <string name="pull_to_refresh_refreshing_label">Împrospătare…</string>
+    <string name="pull_to_refresh_release_label">Eliberați pentru a împrospăta</string>
     <string name="refresh">Reîmprospătaţi</string>
+    <string name="reply">Răspuns</string>
+    <string name="reply_failed">Nu s-a putut răspunde</string>
     <string name="report_miui">Raport de probleme</string>
+    <string name="request_empty_data">Lipsă date</string>
+    <string name="save_pic">Salvați</string>
+    <string name="save_pic_fail">"Nu s-a putut salva imaginea; verificați cardul SD"</string>
+    <string name="save_pic_success">Imagine salvată în %s</string>
     <string name="screen_lock">Blocare ecran</string>
+    <string name="second_position">3#</string>
     <string name="section_description">Descriere</string>
     <string name="section_err_type">Tip de eroare</string>
     <string name="section_screenshot">Captură de ecran</string>
     <string name="submit_dialog_cancel">Anulaţi</string>
     <string name="submit_dialog_confirm">Trimiteţi</string>
     <string name="submit_dialog_content">Feedback-ul dvs., împreună cu jurnalurile erorilor și imagini atașate, vor fi trimise la serverele Mi.</string>
-    <string name="submit_dialog_not_wifi_content">Feedback-ul dvs., împreună cu jurnalurile erorilor și imagini atașate, vor fi trimise la serverele Mi, atunci când dispozitivul este conectat la Wi-Fi.</string>
     <string name="submit_dialog_title">Trimiteţi raportul cu probleme</string>
+    <string name="submit_feedback_info_failed">"Nu s-a putut trimite raportul"</string>
     <string name="suggestion_description">Adăugaţi descrierea aici</string>
     <string name="system_app_select">Aplicații încorporate</string>
     <string name="systemui">Panou notificări</string>
+    <string name="tab_title_chat">Întrebări frecvente</string>
+    <string name="tab_title_my_reports">Rapoartele mele</string>
+    <string name="tab_title_report">Feedback</string>
     <string name="title_nonsystem_app">Alte aplicaţii</string>
     <string name="title_system_app">Aplicaţii MIUI</string>
     <string name="toast_description_required">Descrierea este necesară</string>
