--- a/Romanian/main/MiGalleryLockscreen.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiGalleryLockscreen.apk/res/values-ro/strings.xml
@@ -13,7 +13,7 @@
     <string name="declaration_title">Termeni și Condiții de utilizare</string>
     <string name="hour_1">În fiecare oră</string>
     <string name="hour_3">La fiecare 3 ore</string>
-    <string name="lockscreen_magazine_summary">Categorii.</string>
+    <string name="lockscreen_magazine_summary">Adăugați imaginile dumneavoastră de fundal în dosarul Android/data/com.mfashiongallery.emag/files/Pictures/defaultImage/</string>
     <string name="lockscreen_magazine_system_title">Offline</string>
     <string name="lockscreen_magazine_title">Ecrane de blocare zilnice</string>
     <string name="minutes_15">La fiecare 15 minute</string>
