--- a/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
@@ -41,7 +41,6 @@
     <string name="confirm_restore_title">Restabiliţi setările prestabilite</string>
     <string name="dialog_ok">OK</string>
     <string name="dual_camera_lens_covered_toast">Lentilele sunt acoperite.</string>
-    <string name="dual_camera_low_constract_toast">Contrastul pare a fi  prea scăzut.</string>
     <string name="dual_camera_lowlight_toast">"Se pare că iluminarea este prea slabă".</string>
     <string name="dual_camera_too_close_toast">Camera este prea aproape de obiect.</string>
     <string name="dual_camera_use_hint">"Modul Cameră duală poate obține efectul de blurare a fundalului.
@@ -116,32 +115,25 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_camera_coloreffect_entry_aqua">Acvatic</string>
     <string name="pref_camera_coloreffect_entry_big_face">Extindere</string>
     <string name="pref_camera_coloreffect_entry_blackwhite">Alb-negru</string>
-    <string name="pref_camera_coloreffect_entry_brannan">Zori de zi</string>
-    <string name="pref_camera_coloreffect_entry_earlybird">Toamnă</string>
     <string name="pref_camera_coloreffect_entry_fisheye">Ochi de peşte</string>
   <string name="pref_camera_coloreffect_entry_instagram_clarendon">Color pop</string>
     <string name="pref_camera_coloreffect_entry_instagram_crema">Rustic</string>
     <string name="pref_camera_coloreffect_entry_instagram_hudson">Înghețat</string>
     <string name="pref_camera_coloreffect_entry_instagram_rise">Lomo</string>
-    <string name="pref_camera_coloreffect_entry_jstyle">Japonez</string>
     <string name="pref_camera_coloreffect_entry_light_tunnel">Tunel</string>
     <string name="pref_camera_coloreffect_entry_long_face">Dilatare</string>
     <string name="pref_camera_coloreffect_entry_mirror">Oglindă</string>
     <string name="pref_camera_coloreffect_entry_mono">Mono</string>
     <string name="pref_camera_coloreffect_entry_mosaic">Mozaic</string>
-    <string name="pref_camera_coloreffect_entry_nashvile">Indigo</string>
     <string name="pref_camera_coloreffect_entry_negative">Negativ</string>
     <string name="pref_camera_coloreffect_entry_none">Normal</string>
     <string name="pref_camera_coloreffect_entry_posterize">Posterizare</string>
     <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
-    <string name="pref_camera_coloreffect_entry_seventy">Anii 1970</string>
     <string name="pref_camera_coloreffect_entry_sketch">Schiță</string>
     <string name="pref_camera_coloreffect_entry_small_face">Comprimare</string>
     <string name="pref_camera_coloreffect_entry_vivid">Aprins</string>
     <string name="pref_camera_coloreffect_entry_vsco_a4">Analog</string>
     <string name="pref_camera_coloreffect_entry_vsco_f2">Mat</string>
-    <string name="pref_camera_coloreffect_entry_xproii">Vibrant</string>
-    <string name="pref_camera_coloreffect_entry_yesteryear">Odinioară</string>
     <string name="pref_camera_coloreffect_title">Efecte de culori</string>
     <string name="pref_camera_contrast_title">Contrast</string>
     <string name="pref_camera_delay_capture_entry_10s">10s</string>
@@ -276,9 +268,6 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_camera_show_gender_age_entry_off">Oprit</string>
     <string name="pref_camera_show_gender_age_entry_on">Afişare vârstă şi sex când înfrumusețarea este activată</string>
     <string name="pref_camera_show_gender_age_title">Vârstă și sex</string>
-    <string name="pref_camera_skinToneEnhancement_entry_auto">Îmbunătăţire automată</string>
-    <string name="pref_camera_skinToneEnhancement_entry_disable">Dezactivată</string>
-    <string name="pref_camera_skinToneEnhancement_entry_enable">Activată</string>
     <string name="pref_camera_snap_enable_title">Mod captură instantanee</string>
     <string name="pref_camera_snap_entry_off">Oprit</string>
     <string name="pref_camera_snap_entry_take_movie">Când ecranul este oprit, apăsați și mențineți apăsat butonul de Volum- pentru a începe să filmați. Eliberați-l pentru a opri filmarea.</string>
@@ -292,6 +281,7 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_camera_stereo_mode_title">Stereo</string>
     <string name="pref_camera_tilt_shift_entry_circle">Cerc</string>
     <string name="pref_camera_tilt_shift_entry_parallel">Paralel</string>
+    <string name="pref_camera_tilt_shift_title">Înclinare</string>
     <string name="pref_camera_tilt_shift_title">Înclinare</string>
     <string name="pref_camera_touchafaec_entry_off">Dezactivată</string>
     <string name="pref_camera_touchafaec_entry_on">Activată</string>
