--- a/Romanian/main/Browser.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/strings.xml
@@ -647,7 +647,7 @@ Părăsiţi această pagină?"</string>
     <string name="search_hint">Căutaţi</string>
     <string name="search_keyword_browser">Browser</string>
     <string name="search_label">Browser</string>
-    <string name="search_path_browser">Setări/Aplicații de sistem/Browser</string>
+    <string name="search_path_browser">Setări/Aplicații instalate/Browser</string>
     <string name="search_s139">139</string>
     <string name="search_settings_description">Marcaje şi istoric web</string>
     <string name="search_shipin">Video</string>
