--- a/Romanian/main/Calculator.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calculator.apk/res/values-ro/strings.xml
@@ -121,8 +121,8 @@
     <string name="mortgage_years_amount">Perioada de creditare</string>
     <string name="mul">×</string>
     <string name="mulDesc">înmulţire</string>
-    <string name="network_confirm_content">"Convertorul valutar și calculatorul de taxe și credit trebuie să poată utiliza conexiunea la internet a telefonului pentru a funcționa în mod normal."</string>
-    <string name="network_confirm_title">Este necesară conexiunea la internet</string>
+    <string name="network_confirm_content">"Convertorul valutar și calculatorul de taxe și credit trebuie să poată utiliza conexiunea la internet și serviciul de localizare a telefonului pentru a funcționa în mod normal."</string>
+    <string name="network_confirm_title">Este necesară autorizarea</string>
     <string name="percentage">%</string>
     <string name="pi">π</string>
     <string name="piDesc">pi</string>
@@ -366,6 +366,8 @@
     <string name="unit_year_format">An %s</string>
     <string name="unit_yuan">CNY</string>
     <string name="wf_word_figure">Simboluri financiare</string>
+  <string name="word_figure_big_unit_fen">分</string>
+  <string name="word_figure_big_unit_jiao">角</string>
   <string name="word_figure_big_unit_wan">万</string>
   <string name="word_figure_big_unit_yi">亿</string>
   <string name="word_figure_dot">点</string>
@@ -382,4 +384,6 @@
   <string name="word_figure_unit_bai">佰</string>
   <string name="word_figure_unit_qian">仟</string>
   <string name="word_figure_unit_shi">拾</string>
+  <string name="word_figure_yuan">元</string>
+  <string name="word_figure_zheng">整</string>
 </resources>
