--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -190,6 +190,7 @@
   <string name="every_year_month_of_day">%1$s%2$s zi</string>
     <string name="exist_calendar">Abonat</string>
     <string name="festival_detail_title">Festival</string>
+    <string name="force_touch_title_add_new_event">Adăugați un eveniment nou</string>
   <string name="fortune_birthday">zi de naștere</string>
   <string name="fortune_card_caiwei">poziţia financiară：</string>
   <string name="fortune_card_set_bazi">Stabilirea de naștere</string>
@@ -367,7 +368,6 @@
     <string name="setting_holiday">Zile libere</string>
     <string name="setting_others">Altele</string>
   <string name="setting_sms_import">SMS-uri import evenimente</string>
-    <string name="setting_wifi_mode">Doar Wi-Fi</string>
     <string name="settings_calendar">Calendar</string>
     <string name="show_day_view">Afişaţi ziua</string>
     <string name="show_newer_events">Atingeţi pentru a vedea evenimente după %1$s</string>
