--- a/Romanian/main/SecurityCoreAdd.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityCoreAdd.apk/res/values-ro/strings.xml
@@ -1,4 +1,111 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-    <string name="app_name">Security Core Component</string>
+    <string name="Active">Activ</string>
+    <string name="PassWordGuard">Parola pentru spațiul secundar</string>
+    <string name="PrivacyContactDes1">"Contactele vor deveni private.
+Mesajele vor apărea doar în spațiul secundar."</string>
+    <string name="PrivacyContactDes2">"Dacă ați utilizat mesajele private în spațiul principal,
+această opțiune va fi activată în mod automat în spațiul secundar."</string>
+    <string name="appData">Aplicații instalate</string>
+    <string name="app_name">Componentă de bază de securitate</string>
+    <string name="cancelClosePassword">"Nu opri"</string>
+    <string name="cancel_button">Renunțați</string>
+    <string name="changePassword">Modificați parola</string>
+    <string name="chooseDataTransfer">Ce doriți să faceți cu datele din spațiul secundar?</string>
+    <string name="chooseFile">Selectați alte fișere</string>
+    <string name="click_to_back_first_space">Atingeți pentru a merge la spațiul principal</string>
+    <string name="click_to_switch">Atingeți pentru a vizualiza</string>
+    <string name="closePassword">Dezactivați parola</string>
+    <string name="closePasswordGuide">"Nu veți putea accesa spațiul secundar din Blocarea ecranului după ce veți dezactiva parola"</string>
+    <string name="closeSecondSpace">Eliminați Spațiul Secundar</string>
+    <string name="closeSecondSpaceSummary">Eliminați Spațiul Secundar împreună cu datele conținute</string>
+    <string name="closeSuccess">Dezactivat</string>
+    <string name="close_second_space_success">Spațiul Secundar a fost eliminat</string>
+    <string name="closed">Oprit</string>
+    <string name="complete_setting">Finalizat</string>
+    <string name="complete_setting_sub_title">Puteți reveni ulterior pentru a modifca setările.</string>
+    <string name="complete_setting_title">"Totul este pregătit!"</string>
+    <string name="confirm">OK</string>
+    <string name="confirmClose">Dezactivați</string>
+    <string name="confirmCloseSpaceDes">"Nu veți mai putea accesa Spațiul Secundar după ce îl veți elimina. Toate datele vor fi mutate sau vor fi șterse."</string>
+    <string name="confirmDelete">Eliminați</string>
+    <string name="confirmSecondSpacePassword">Confirmați parola pentru Spațiul Secundar</string>
+    <string name="confirm_main_space_password">Confirmați parola pentru Spațiul Principal</string>
+    <string name="confirm_restore">"Nu arăta"</string>
+    <string name="contactData">Contacte</string>
+    <string name="contact_sub_titile_text">Mesajele vor fi partajate între cele 2 spații de lucru</string>
+    <string name="contact_titile_text">"Afișează mesajele private în Spațiul Secundar
+pentru a le putea vedea în orice moment"</string>
+    <string name="continueButton">Continuați</string>
+    <string name="createANewSpace">Creați în telefon un spațiu de lucru separat.</string>
+    <string name="createUserFail">"Nu s-a putut crea"</string>
+    <string name="create_app_icon_failed">"Nu s-a putut crea pictograma"</string>
+    <string name="create_app_icon_success">Pictograma a fost creată cu succes</string>
+    <string name="create_space_loading">Se crează Spațiul Secundar…</string>
+    <string name="creating_app_icon">Se crează pictograma…</string>
+    <string name="dataSafe">Utilizarea Spațiului Secundar este ca și cum ați avea două telefoane.</string>
+    <string name="declare_dialog_title">Despre aplicațiile clonate</string>
+    <string name="deleteAll">Ștergeți tot</string>
+    <string name="deleteDataConfirm">Toate elementele vor fi șterse</string>
+    <string name="deleteDataDes">"Nu ați selectat elementele care trebuie mutate. Odată șterse, nu le veți putea restaura ."</string>
+    <string name="delete_src_file">Ștergeți fișierele</string>
+    <string name="delete_src_photo">Ștergeți fotografiile</string>
+    <string name="dir_switch_out_all_photos">Galeria din Spațiul Secundar</string>
+    <string name="disable">Dezactivați</string>
+    <string name="dont_import">Nu acum</string>
+    <string name="enable">Activați</string>
+    <string name="err_copy_contacts">"Nu s-au putut copia contactele"</string>
+    <string name="err_copy_files">"Nu s-au putut copia fișierele"</string>
+    <string name="err_copy_photos">"Nu s-au putut copia fotografiile"</string>
+    <string name="err_delete_contacts">"Nu s-au putut șterge contactele"</string>
+    <string name="err_delete_files">"Nu s-au putut șterge fișierele"</string>
+    <string name="err_delete_photos">"Nu s-au putut șterge fotografiile"</string>
+    <string name="err_switch_apps">"Nu s-au putut muta aplicațiile"</string>
+    <string name="err_switch_contacts">"Nu s-au putut muta contactele"</string>
+    <string name="err_switch_files">"Nu s-au putut muta fișierele"</string>
+    <string name="err_switch_photos">"Nu s-au putut muta fotografiile"</string>
+    <string name="err_unknown">Eroare necunoscută</string>
+    <string name="err_volume_not_enough">Spațiu de stocare insuficient</string>
+    <string name="exit_private_space">Comutați</string>
+    <string name="goToSecondSpacce">Mergeți în Spațiul Secundar</string>
+    <string name="go_on_import">Importați</string>
+    <string name="guide_contact_sub_title_desc">"Contactele adăugate în Spațiul Secundar vor fi private.
+Mesajele vor fi vizibile doar în Spațiul Secundar."</string>
+    <string name="guide_contact_suc_sub_title_desc">Doar contactele și mesajele private vor fi vizibile în Spațiul Secundar</string>
+    <string name="guide_contact_suc_title_desc">Setat cu succes</string>
+    <string name="guide_contact_title_desc">Faceți vizibile elementele private în Spațiul Secundar?</string>
+    <string name="guide_pwd_detail_title">"Protejați-vă datele
+Intrați în Spațiul Secundar din blocarea ecranului"</string>
+    <string name="guide_setting_guide_title">Gestionați Spațiul Secundar</string>
+    <string name="hidden_app">Spațiu Secundar</string>
+    <string name="imageData">Fotografii</string>
+    <string name="import_application">Importați aplicații</string>
+    <string name="import_application_desc">"Importați aplicații în Spațiul Secundar.
+Le puteți de asemenea descărca separat."</string>
+    <string name="import_contacts">Importați contacte</string>
+    <string name="import_contacts_desc">Faceți private contactele importate</string>
+    <string name="import_contacts_suc">Contacte private importate</string>
+    <string name="import_file_suc">Elemente importate în dosare</string>
+    <string name="import_now">Importați</string>
+    <string name="import_photo">Importați fotografii</string>
+  <string name="import_photo_desc">View shared items in Second space</string>
+  <string name="import_photo_suc">Imported photos</string>
+  <string name="list_empty_text">Empty</string>
+  <string name="loading_apps">Loading apps…</string>
+  <string name="loading_space">Just a sec…</string>
+  <string name="loading_success">Loaded successfully</string>
+  <string name="mess ageData">Messages</string>
+  <string name="msg_switch_file">Delete these files in First space after they are moved?</string>
+  <string name="msg_switch_photo">Delete these photos in First space after they are moved?</string>
+  <string name="needSetKeyguardFirst">Set First space password</string>
+  <string name="needSetKeyguardFirstDes">Set First space password before you set Second space password</string>
+  <string name="newSecondSpace">Turn on Second space</string>
+  <string name="next_setp">Next</string>
+  <string name="normal_app">First space</string>
+  <string name="not_support_multiple_users">"Multiple spaces aren't supported"</string>
+  <string name="notificationSetPassword">Set password</string>
+  <string name="notificationSetPasswordDes">Protect Second space data</string>
+  <string name="notificationSummary">Switch between spaces from Notification shade</string>
+  <string name="notificationTitle">Notification shade shortcut</string>
+  <string name="notification_setting_second_space">Set up Second space</string>
 </resources>
