--- a/Romanian/main/Updater.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Updater.apk/res/values-ro/strings.xml
@@ -100,7 +100,7 @@
     <string name="miui_summary_has_new_version">" Actualizare disponibilă "</string>
     <string name="miui_summary_no_new_version">Nu există actualizări disponibile</string>
     <string name="miui_summary_now_version">Nu se poate conecta la rețea</string>
-    <string name="miui_summary_slogan">"  Yours by design  "</string>
+    <string name="miui_summary_slogan">"  Simplificați-vă viața  "</string>
     <string name="miui_summary_updating">"  Actualizare…  "</string>
     <string name="monthly_build">Lunar</string>
     <string name="my_best_update">Cea mai bună actualizare</string>
